--- a/Final_Assignment Library.ipynb
+++ b/Final_Assignment Library.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +145,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'zip': '95014',\n",
+       " 'sector': 'Technology',\n",
+       " 'fullTimeEmployees': 154000,\n",
+       " 'longBusinessSummary': 'Apple Inc. designs, manufactures, and markets smartphones, personal computers, tablets, wearables, and accessories worldwide. It also sells various related services. In addition, the company offers iPhone, a line of smartphones; Mac, a line of personal computers; iPad, a line of multi-purpose tablets; AirPods Max, an over-ear wireless headphone; and wearables, home, and accessories comprising AirPods, Apple TV, Apple Watch, Beats products, HomePod, and iPod touch. Further, it provides AppleCare support services; cloud services store services; and operates various platforms, including the App Store that allow customers to discover and download applications and digital content, such as books, music, video, games, and podcasts. Additionally, the company offers various services, such as Apple Arcade, a game subscription service; Apple Music, which offers users a curated listening experience with on-demand radio stations; Apple News+, a subscription news and magazine service; Apple TV+, which offers exclusive original content; Apple Card, a co-branded credit card; and Apple Pay, a cashless payment service, as well as licenses its intellectual property. The company serves consumers, and small and mid-sized businesses; and the education, enterprise, and government markets. It distributes third-party applications for its products through the App Store. The company also sells its products through its retail and online stores, and direct sales force; and third-party cellular network carriers, wholesalers, retailers, and resellers. Apple Inc. was incorporated in 1977 and is headquartered in Cupertino, California.',\n",
+       " 'city': 'Cupertino',\n",
+       " 'phone': '408 996 1010',\n",
+       " 'state': 'CA',\n",
+       " 'country': 'United States',\n",
+       " 'companyOfficers': [],\n",
+       " 'website': 'http://www.apple.com',\n",
+       " 'maxAge': 1,\n",
+       " 'address1': 'One Apple Park Way',\n",
+       " 'industry': 'Consumer Electronics',\n",
+       " 'ebitdaMargins': 0.32867,\n",
+       " 'profitMargins': 0.25882,\n",
+       " 'grossMargins': 0.41779,\n",
+       " 'operatingCashflow': 104037998592,\n",
+       " 'revenueGrowth': 0.288,\n",
+       " 'operatingMargins': 0.29782,\n",
+       " 'ebitda': 120233000960,\n",
+       " 'targetLowPrice': 128.01,\n",
+       " 'recommendationKey': 'buy',\n",
+       " 'grossProfits': 152836000000,\n",
+       " 'freeCashflow': 73295003648,\n",
+       " 'targetMedianPrice': 170,\n",
+       " 'currentPrice': 156.81,\n",
+       " 'earningsGrowth': 0.662,\n",
+       " 'currentRatio': 1.075,\n",
+       " 'returnOnAssets': 0.20179,\n",
+       " 'numberOfAnalystOpinions': 40,\n",
+       " 'targetMeanPrice': 168.45,\n",
+       " 'debtToEquity': 216.392,\n",
+       " 'returnOnEquity': 1.47443,\n",
+       " 'targetHighPrice': 190,\n",
+       " 'totalCash': 62639001600,\n",
+       " 'totalDebt': 136521998336,\n",
+       " 'totalRevenue': 365817004032,\n",
+       " 'totalCashPerShare': 3.818,\n",
+       " 'financialCurrency': 'USD',\n",
+       " 'revenuePerShare': 21.904,\n",
+       " 'quickRatio': 0.91,\n",
+       " 'recommendationMean': 1.9,\n",
+       " 'exchange': 'NMS',\n",
+       " 'shortName': 'Apple Inc.',\n",
+       " 'longName': 'Apple Inc.',\n",
+       " 'exchangeTimezoneName': 'America/New_York',\n",
+       " 'exchangeTimezoneShortName': 'EST',\n",
+       " 'isEsgPopulated': False,\n",
+       " 'gmtOffSetMilliseconds': '-18000000',\n",
+       " 'quoteType': 'EQUITY',\n",
+       " 'symbol': 'AAPL',\n",
+       " 'messageBoardId': 'finmb_24937',\n",
+       " 'market': 'us_market',\n",
+       " 'annualHoldingsTurnover': None,\n",
+       " 'enterpriseToRevenue': 7.235,\n",
+       " 'beta3Year': None,\n",
+       " 'enterpriseToEbitda': 22.012,\n",
+       " '52WeekChange': 0.3889699,\n",
+       " 'morningStarRiskRating': None,\n",
+       " 'forwardEps': 6.15,\n",
+       " 'revenueQuarterlyGrowth': None,\n",
+       " 'sharesOutstanding': 16406400000,\n",
+       " 'fundInceptionDate': None,\n",
+       " 'annualReportExpenseRatio': None,\n",
+       " 'totalAssets': None,\n",
+       " 'bookValue': 3.841,\n",
+       " 'sharesShort': 99688619,\n",
+       " 'sharesPercentSharesOut': 0.0061000003,\n",
+       " 'fundFamily': None,\n",
+       " 'lastFiscalYearEnd': 1632528000,\n",
+       " 'heldPercentInstitutions': 0.58699,\n",
+       " 'netIncomeToCommon': 94679998464,\n",
+       " 'trailingEps': 5.61,\n",
+       " 'lastDividendValue': 0.22,\n",
+       " 'SandP52WeekChange': 0.29219568,\n",
+       " 'priceToBook': 40.825306,\n",
+       " 'heldPercentInsiders': 0.00071000005,\n",
+       " 'nextFiscalYearEnd': 1695600000,\n",
+       " 'yield': None,\n",
+       " 'mostRecentQuarter': 1632528000,\n",
+       " 'shortRatio': 1.5,\n",
+       " 'sharesShortPreviousMonthDate': 1634256000,\n",
+       " 'floatShares': 16389334347,\n",
+       " 'beta': 1.205714,\n",
+       " 'enterpriseValue': 2646570172416,\n",
+       " 'priceHint': 2,\n",
+       " 'threeYearAverageReturn': None,\n",
+       " 'lastSplitDate': 1598832000,\n",
+       " 'lastSplitFactor': '4:1',\n",
+       " 'legalType': None,\n",
+       " 'lastDividendDate': 1636070400,\n",
+       " 'morningStarOverallRating': None,\n",
+       " 'earningsQuarterlyGrowth': 0.622,\n",
+       " 'priceToSalesTrailing12Months': 7.032717,\n",
+       " 'dateShortInterest': 1636934400,\n",
+       " 'pegRatio': 1.83,\n",
+       " 'ytdReturn': None,\n",
+       " 'forwardPE': 25.49756,\n",
+       " 'lastCapGain': None,\n",
+       " 'shortPercentOfFloat': 0.0061000003,\n",
+       " 'sharesShortPriorMonth': 100881318,\n",
+       " 'impliedSharesOutstanding': None,\n",
+       " 'category': None,\n",
+       " 'fiveYearAverageReturn': None,\n",
+       " 'previousClose': 161.94,\n",
+       " 'regularMarketOpen': 159.565,\n",
+       " 'twoHundredDayAverage': 138.0779,\n",
+       " 'trailingAnnualDividendYield': 0.0052488577,\n",
+       " 'payoutRatio': 0.1515,\n",
+       " 'volume24Hr': None,\n",
+       " 'regularMarketDayHigh': 160.448,\n",
+       " 'navPrice': None,\n",
+       " 'averageDailyVolume10Day': 84986720,\n",
+       " 'regularMarketPreviousClose': 161.94,\n",
+       " 'fiftyDayAverage': 148.1258,\n",
+       " 'trailingAnnualDividendRate': 0.85,\n",
+       " 'open': 159.565,\n",
+       " 'toCurrency': None,\n",
+       " 'averageVolume10days': 84986720,\n",
+       " 'expireDate': None,\n",
+       " 'algorithm': None,\n",
+       " 'dividendRate': 0.88,\n",
+       " 'exDividendDate': 1636070400,\n",
+       " 'circulatingSupply': None,\n",
+       " 'startDate': None,\n",
+       " 'regularMarketDayLow': 156.36,\n",
+       " 'currency': 'USD',\n",
+       " 'trailingPE': 27.95187,\n",
+       " 'regularMarketVolume': 72367719,\n",
+       " 'lastMarket': None,\n",
+       " 'maxSupply': None,\n",
+       " 'openInterest': None,\n",
+       " 'marketCap': 2572687507456,\n",
+       " 'volumeAllCurrencies': None,\n",
+       " 'strikePrice': None,\n",
+       " 'averageVolume': 78513619,\n",
+       " 'dayLow': 156.36,\n",
+       " 'ask': 157.4,\n",
+       " 'askSize': 900,\n",
+       " 'volume': 72367719,\n",
+       " 'fiftyTwoWeekHigh': 165.7,\n",
+       " 'fromCurrency': None,\n",
+       " 'fiveYearAvgDividendYield': 1.22,\n",
+       " 'fiftyTwoWeekLow': 116.21,\n",
+       " 'bid': 157.31,\n",
+       " 'tradeable': False,\n",
+       " 'dividendYield': 0.0054,\n",
+       " 'bidSize': 800,\n",
+       " 'dayHigh': 160.448,\n",
+       " 'regularMarketPrice': 156.81,\n",
+       " 'preMarketPrice': 159.41,\n",
+       " 'logo_url': 'https://logo.clearbit.com/apple.com'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "apple_info=apple.info\n",
     "apple_info"
@@ -185,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,9 +363,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1980-12-12</td>\n",
+       "      <td>0.100453</td>\n",
+       "      <td>0.100890</td>\n",
+       "      <td>0.100453</td>\n",
+       "      <td>0.100453</td>\n",
+       "      <td>469033600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1980-12-15</td>\n",
+       "      <td>0.095649</td>\n",
+       "      <td>0.095649</td>\n",
+       "      <td>0.095213</td>\n",
+       "      <td>0.095213</td>\n",
+       "      <td>175884800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1980-12-16</td>\n",
+       "      <td>0.088661</td>\n",
+       "      <td>0.088661</td>\n",
+       "      <td>0.088224</td>\n",
+       "      <td>0.088224</td>\n",
+       "      <td>105728000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1980-12-17</td>\n",
+       "      <td>0.090408</td>\n",
+       "      <td>0.090845</td>\n",
+       "      <td>0.090408</td>\n",
+       "      <td>0.090408</td>\n",
+       "      <td>86441600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1980-12-18</td>\n",
+       "      <td>0.093029</td>\n",
+       "      <td>0.093466</td>\n",
+       "      <td>0.093029</td>\n",
+       "      <td>0.093029</td>\n",
+       "      <td>73449600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date      Open      High       Low     Close     Volume  Dividends  \\\n",
+       "0 1980-12-12  0.100453  0.100890  0.100453  0.100453  469033600        0.0   \n",
+       "1 1980-12-15  0.095649  0.095649  0.095213  0.095213  175884800        0.0   \n",
+       "2 1980-12-16  0.088661  0.088661  0.088224  0.088224  105728000        0.0   \n",
+       "3 1980-12-17  0.090408  0.090845  0.090408  0.090408   86441600        0.0   \n",
+       "4 1980-12-18  0.093029  0.093466  0.093029  0.093029   73449600        0.0   \n",
+       "\n",
+       "   Stock Splits  \n",
+       "0           0.0  \n",
+       "1           0.0  \n",
+       "2           0.0  \n",
+       "3           0.0  \n",
+       "4           0.0  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "apple_share_price_data.head()"
    ]
@@ -217,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
